--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,35 @@
+@import "./config/_colors.scss";
+
 body,html {
+    background-color: $default-bg;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    button {
+        background-color: transparent;
+        border: none;
+        outline: none;
+    }
+    .urlArea{
+        position: fixed;
+        top:0;
+        height: 45pt;
+        width: 100%;
+        background-color: gray;
+        z-index: 20;
+    }
+    .actionBarArea{
+        position: fixed;
+        bottom: 0;
+        margin: auto;
+        height: 45pt;
+        width: 100%;
+        background-color: gray;
+        z-index: 20;
+    }
 }
 
 .slider {
@@ -11,10 +41,10 @@ body,html {
         left:0;
         bottom:0;
         margin: auto;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         z-index: 0;
         opacity: 0;
         pointer-events: none;
