--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,5 +1,8 @@
 @import "./config/reset.scss";
 @import "./config/fonts.scss";
 
+@import "./screens/start.scss";
+@import "./screens/question.scss";
+@import "./screens/loading.scss";
+
 @import "./main.scss";
-@import "./partials/button.scss";
