--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,16 +2,27 @@
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" )
+        link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700;900&display=swap" rel="stylesheet")
         link(rel="stylesheet", href="styles.css")
-        title Document
+        title 관태기 테스트
     body
+        .urlArea
         #jsSlider.slider
-            include screens/firstView
-            include screens/secondView
-            include screens/thirdView
-            include screens/fourthView
-            include screens/fifthView
-            include screens/lastView
+            include screens/start
+            include screens/question1
+            include screens/question2
+            include screens/question3
+            include screens/question4
+            include screens/question5
+            include screens/question6
+            include screens/question7
+            include screens/question8
+            include screens/question9
+            include screens/question10
+            include screens/question11
+            include screens/loading
+            include screens/result
+        .actionBarArea
         script(src="main.js")
         script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ec9216c01abc74d")
