--- a/src/views/screens/question10.pug
+++ b/src/views/screens/question10.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C10%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1")
                 span ①
                 span 다른 친구와 약속을 잡는다
-            button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2")
                 span ②
                 span 친구와 가려고 했던 곳을 혼자서라도 가 본다
-            button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3")
                 span ③
                 span 괜찮다고 하고 속으로 운다
-            button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4")
                 span ④
                 span 기뻐하며 집에서 쉰다
         
