--- a/src/views/screens/question11.pug
+++ b/src/views/screens/question11.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C11%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1")
                 span ①
                 span 보이는 카톡창마다 메시지를 보낸다
-            button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2")
                 span ②
                 span 우울한 음악을 틀고 분위기를 고조시킨다
-            button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3")
                 span ③
                 span 친한 친구와 바로 약속을 잡는다
-            button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4")
                 span ④
                 span 탄수화물 부족인가?<br>배달 앱을 켜 기분 전환용 음식을 시킨다
         
