--- a/src/views/screens/question6.pug
+++ b/src/views/screens/question6.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C6%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1")
                 span ①
                 span "오랜만이야~" 반갑게 인사한다
-            button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2")
                 span ②
                 span 모르는 사이 아닌가? 아는 척하지 않는다
-            button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3")
                 span ③
                 span 불편하지만 눈인사 정도는 나눈다
-            button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4")
                 span ④
                 span 친한 친구들 무리로 이동한다
         
