--- a/src/views/screens/question8.pug
+++ b/src/views/screens/question8.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C8%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1")
                 span ①
                 span "너무 좋아 보인다~"라며 댓글을 남긴다
-            button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2")
                 span ②
                 span 질 수 없지! 더 행복한 내 일상을 올린다
-            button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3")
                 span ③
                 span 일단 좋아요는 눌러 준다
-            button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4")
                 span ④
                 span 언팔하거나 숨기기를 한다
         
