--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -12,5 +12,5 @@
             //- 샘플이미지
             img(src="https://cdn.imweb.me/thumbnail/20200316/2948e081b267c.jpg" alt="")
         .startBtn
-            button
+            .button
                 img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%A9%94%EC%9D%B8/%EC%8B%9C%EC%9E%91%EB%B2%84%ED%8A%BC.png")
