--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,54 +1,70 @@
 @import "./config/_colors.scss";
 
 body,html {
-    background-color: $default-bg;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    button {
-        background-color: transparent;
-        border: none;
-        outline: none;
+    background-color: $default-bg;
+    &:hover{
+        cursor: default;
     }
-    .urlArea{
-        position: fixed;
-        top:0;
-        height: 45pt;
-        width: 100%;
-        background-color: gray;
-        z-index: 20;
-        display: none;
-    }
-    .actionBarArea{
-        display: none;
-        position: fixed;
-        bottom: 0;
-        margin: auto;
-        height: 45pt;
-        width: 100%;
-        background-color: gray;
-        z-index: 20;
-    }
-}
-
-.slider {
-    width: 100%;
-    .slide {
-        position: absolute;
-        top:0;
-        right:0;
-        left:0;
-        bottom:0;
-        margin: auto;
-        width: 100%;
+    main{
+        &.typeOne{
+            background-color: $type-one;
+            transition: all 4s linear;
+        }
+        &.typeTwo{
+            background-color: $type-two;
+            transition: all 4s linear;
+        }
+        &.typeThree{
+            background-color: $type-three;   
+            transition: all 4s linear;
+        }
+        &.typeFour{
+            background-color: $type-four;
+            transition: all 4s linear;
+        }
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        z-index: 0;
-        opacity: 0;
-        pointer-events: none;
+        width: 100%;
+        height: 100%;
+        // .urlArea{
+        //     position: fixed;
+        //     top:0;
+        //     height: 45pt;
+        //     width: 100%;
+        //     background-color: gray;
+        //     z-index: 20;
+        // }
+        // .actionBarArea{
+        //     position: fixed;
+        //     bottom: 0;
+        //     margin: auto;
+        //     height: 45pt;
+        //     width: 100%;
+        //     background-color: gray;
+        //     z-index: 20;
+        // }
+        .slider {
+            width: 100%;
+            .slide {
+                position: absolute;
+                top:0;
+                right:0;
+                left:0;
+                bottom:0;
+                margin: auto;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                z-index: 0;
+                opacity: 0;
+                pointer-events: none;
+            }
+        }
     }
 }
