--- a/src/assets/scss/partials/type3.scss
+++ b/src/assets/scss/partials/type3.scss
@@ -3,8 +3,7 @@
     display: none;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    height: 80vh;
+    justify-content: center;
     .title{
         .title__type{
             span{
