--- a/src/assets/scss/screens/loading.scss
+++ b/src/assets/scss/screens/loading.scss
@@ -4,8 +4,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        height: 80vh;
+        justify-content: center;
         .content__row{
             display: flex;
             flex-direction: column;
@@ -15,7 +14,7 @@
                 text-align: center;
                 line-height: 1.4;
                 font-size: 20px;
-                margin-bottom: 5%;
+                margin-bottom: 17px;
                 span {
                     font-family: "SCDream5";
                     focus{
@@ -37,6 +36,7 @@
             }
         }
         .bookImage{
+            margin: 25px 0;
             img{
                 height: 200px;
             }
@@ -92,9 +92,9 @@
             }
             .resultBtn{
                 width: fit-content;
-                button{
+                .button{
                     img{
-                        height: 140px;
+                        height: 120px;
                         animation: ready 1s linear infinite;
                     }
                 }
