--- a/src/assets/scss/screens/question.scss
+++ b/src/assets/scss/screens/question.scss
@@ -7,8 +7,7 @@
         align-items: center;
         position: relative;
         max-width: 370px;
-        width: 90%;
-        height: 80vh;
+        width: 88%;
         .topImage{
             width: 100%;
             position: absolute;
@@ -23,9 +22,9 @@
             position: relative;
             margin-top: 40px;
             margin-bottom: 15px;
-            background-color: #ffffff70;
+            background-color: #ffffff60;
             border-radius: 10px;
-            padding-top: 20%;
+            padding-top: 70px;
             padding-bottom: 10px;
             display: flex;
             justify-content: center;
@@ -37,17 +36,18 @@
                 margin: auto;
                 width: fit-content;
                 img{
-                    width: 50px;
+                    height: 50px;
                 }
             }
             .main{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                background-color: transparent;
                 .main__text{
                     text-align: center;
                     line-height: 1.3;
-                    margin-bottom: 15%;
+                    margin-bottom: 33px;
                     span {
                         font-family: "SCDream5";
                         font-size: 17px;
@@ -65,13 +65,13 @@
         }
         .buttons{
             width: 99%;
-            button {
+            .button {
                 &:not(:last-child){
                     margin-bottom: 10px;
                 }
                 width: 100%;
                 background-color: $selectBtn;
-                padding: 3% 10px;
+                padding: 10px 0;
                 border-radius: 10px;
                 box-shadow: 2px 2px 4px $selectBtn-shadow;
                 font-family: "SCDream6";
@@ -80,10 +80,12 @@
                 align-items: center;
                 span:nth-child(1){
                     font-family: "SCDream5";
+                    margin-left: 10px;
                 }
                 span:nth-child(2){
                     width: 100%;
                     text-align: center;
+                    line-height: 1.3;
                 }
                 transition: all 0.2s linear;
                 &:active {
