--- a/src/assets/scss/screens/result.scss
+++ b/src/assets/scss/screens/result.scss
@@ -1,18 +1,5 @@
 @import "../config/_colors";
 .result{
-    &.type-one{
-     background-color: $type-one;   
-    }
-    &.type-two{
-     background-color: $type-two;   
-    }
-    &.type-three{
-     background-color: $type-three;   
-    }
-    &.type-four{
-     background-color: $type-four;   
-    }
-    height: 100vh;
     .slide__content{
         .type{
             .title{
@@ -27,10 +14,12 @@
                     }
                 }
                 .title__battery{
-                    padding: 5px 10px;
+                    width: 100%;
+                    padding: 5px 7px;
                     border-radius: 10px;
                     display: flex;
                     align-items: center;
+                    justify-content: center;
                     img{
                         height: 15px;
                         margin-right: 5px;
@@ -50,7 +39,10 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                justify-content: center;
+                margin: 20px 0;
                 .mainImage{
+                    margin-bottom: 15px;
                     img{
                         height: 250px;
                     }
@@ -58,7 +50,7 @@
                 .info{
                     text-align: center;
                     line-height: 1.3;
-                    margin: 15px 0;
+                    margin-bottom: 15px;
                     span{
                         font-family: "SCDream5";
                         font-size: 20px;
@@ -76,6 +68,9 @@
                     .bad{
                         font-size: 17px;
                         font-family: "SCDream5";
+                        &:not(:last-child){
+                            margin-bottom: 4px;
+                        }
                         strong{
                             font-family: "SCDream6";
                         }
@@ -87,12 +82,14 @@
                     margin-bottom: 10px;
                     display: flex;
                     justify-content: center;
+                    align-items: center;
                     img{
-                        width: 240px;
+                        height: 44px;
                     }
                 }
                 .addThis{
                     display: flex;
+                    align-items: center;
                     justify-content: center;
                 }
             }
