--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,23 +6,24 @@ html(lang="en")
         link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700;900&display=swap" rel="stylesheet")
         link(rel="stylesheet", href="styles.css")
         title 관태기 테스트
-    body
-        .urlArea
-        #jsSlider.slider
-            include screens/start
-            include screens/question1
-            include screens/question2
-            include screens/question3
-            include screens/question4
-            include screens/question5
-            include screens/question6
-            include screens/question7
-            include screens/question8
-            include screens/question9
-            include screens/question10
-            include screens/question11
-            include screens/loading
-            include screens/result
-        .actionBarArea
+    body(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
+        main
+            //- .urlArea
+            #jsSlider.slider
+                include screens/start
+                include screens/question1
+                include screens/question2
+                include screens/question3
+                include screens/question4
+                include screens/question5
+                include screens/question6
+                include screens/question7
+                include screens/question8
+                include screens/question9
+                include screens/question10
+                include screens/question11
+                include screens/loading
+                include screens/result
+            //- .actionBarArea
         script(src="main.js")
         script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ec9216c01abc74d")
