--- a/src/views/screens/question3.pug
+++ b/src/views/screens/question3.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C3%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1")
                 span ①
                 span 반갑게 인사한다
-            button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2")
                 span ②
                 span 다른 곳 가는 척하면서 먼저 보낸다
-            button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3")
                 span ③
                 span 어색하지만 티 내지 않고 함께 탄다
-            button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4")
                 span ④
                 span 계단으로 올라간다
         
