--- a/src/assets/scss/screens/iphone7.scss
+++ b/src/assets/scss/screens/iphone7.scss
@@ -6,36 +6,37 @@
                     .content__row{
                         .topImage{
                             img.description{
-                                top: -25px;
-                                height: 32px;
+                                top: -30px;
+                                right: -55px;
+                                height: 36px;
                             }
                             img.main{
-                                height: 95px;
+                                height: 105px;
                             }
                         }
                         .title{
                             div:nth-child(1){
-                                font-size: 24px;
+                                font-size: 26px;
                             }
                             div:nth-child(2){
-                                font-size: 27px;
+                                font-size: 29px;
                             }
                             div:nth-child(3){
                                 padding: 5px 7px;
-                                font-size: 12px;
+                                font-size: 14px;
                             }
                         }
                     }
                     .bookImage{
-                        margin: 15px;
+                        margin: 20px;
                         img{
-                            height: 180px;
+                            height: 200px;
                         }
                     }
                     .startBtn{
                         .button{
                             img{
-                                height: 80px;
+                                height: 90px;
                             }
                         }
                     }
@@ -46,10 +47,10 @@
             .slide__content{
                 width: 87%;
                 .topImage{
-                    top: -25px;
+                    top: -20px;
                 }
                 .content__row{
-                    margin-top: 20px;
+                    margin-top: 30px;
                     padding-top: 40px;
                     .count{
                         top: -20px;
@@ -59,22 +60,22 @@
                     }
                     .main{
                         .main__text{
-                            margin-bottom: 20px;
+                            margin-bottom: 30px;
                             span{
-                                font-size: 15px;
+                                font-size: 18px;
                             }
                         }
                         .main__image{
                             img{
-                                height: 150px;
+                                height: 200px;
                             }
                         }
                     }
                 }
                 .buttons{
                     .button{
-                        padding: 7px 0;
-                        font-size: 13px;
+                        padding: 8px 0;
+                        font-size: 15px;
                     }
                 }
             }
@@ -83,35 +84,35 @@
             .slide__content{
                 .content__row{
                     .questionTitle{
-                        font-size: 16px;  
+                        font-size: 19px;  
                         margin-bottom: 13px; 
                         span{
                             focus{
-                                font-size: 17px;
+                                font-size: 20px;
                             }
                         }
                     }
                     .mainTitle{
                         span{
-                            font-size: 17px;
+                            font-size: 20px;
                         }
                     }
                 }
                 .bookImage{
-                    margin: 15px 0;
+                    margin: 20px 0;
                     img{
-                        height: 160px;
+                        height: 200px;
                     }
                 }
                 .loadingComment{
                     .comment{
                         span{
-                            font-size: 14px;
+                            font-size: 16px;
                         }
                     }
                     .loadingAnimation{
                         span{
-                            font-size: 13px;
+                            font-size: 14px;
                         }
                         .dot{
                             width: 4px;
@@ -121,7 +122,7 @@
                     .resultBtn{
                         .button{
                             img{
-                                height: 110px;
+                                height: 120px;
                             }
                         }
                     }
@@ -134,40 +135,40 @@
                     .title{
                         .title__type{
                             span{
-                                font-size: 21px;
+                                font-size: 24px;
                             }
                         }
                         .title__battery{
                             span{
-                                font-size: 13px;    
+                                font-size: 15px;    
                             }
                         }
                     }
                     .content__row{
                         .mainImage{
                             img{
-                                height: 170px;
+                                height: 200px;
                             }
                         }
                         .info{
                             span{
-                                font-size: 16px;
+                                font-size: 19px;
                                 strong{
-                                    font-size: 22px;
+                                    font-size: 25px;
                                 }
                             }
                         }
                         .friends{
                             .good,
                             .bad{
-                                font-size: 14px;
+                                font-size: 16px;
                             }
                         }
                     }
                     .sharedSNS{
                         .sharedImage{
                             img{
-                                height: 38px;
+                                height: 40px;
                             }
                         }
                     }
