--- a/src/assets/scss/screens/iphone7plus.scss
+++ b/src/assets/scss/screens/iphone7plus.scss
@@ -6,9 +6,9 @@
                     .content__row{
                         .topImage{
                             img.description{
-                                top: -32px;
-                                right: -54px;
-                                height: 38px;
+                                top: -33px;
+                                right: -58px;
+                                height: 40px;
                             }
                             img.main{
                                 height: 120px;
@@ -16,27 +16,27 @@
                         }
                         .title{
                             div:nth-child(1){
-                                font-size: 27px;
+                                font-size: 28px;
                             }
                             div:nth-child(2){
-                                font-size: 30px;
+                                font-size: 31px;
                             }
                             div:nth-child(3){
-                                padding: 6px 7px;
+                                padding: 5px 7px;
                                 font-size: 15px;
                             }
                         }
                     }
                     .bookImage{
-                        margin: 17px;
+                        margin: 20px;
                         img{
-                            height: 200px;
+                            height: 240px;
                         }
                     }
                     .startBtn{
                         .button{
                             img{
-                                height: 95px;
+                                height: 100px;
                             }
                         }
                     }
@@ -45,12 +45,13 @@
         }
         .question{
             .slide__content{
+                width: 87%;
                 .topImage{
                     top: -20px;
                 }
                 .content__row{
-                    margin-top: 35px;
-                    padding-top: 40px;
+                    margin-top: 30px;
+                    padding-top: 60px;
                     .count{
                         top: -20px;
                         img{
@@ -59,22 +60,22 @@
                     }
                     .main{
                         .main__text{
-                            margin-bottom: 25px;
+                            margin-bottom: 35px;
                             span{
-                                font-size: 17px;
+                                font-size: 19px;
                             }
                         }
                         .main__image{
                             img{
-                                height: 200px;
+                                height: 230px;
                             }
                         }
                     }
                 }
                 .buttons{
                     .button{
-                        padding: 8px 0;
-                        font-size: 15px;
+                        padding: 9px 0;
+                        font-size: 16px;
                     }
                 }
             }
@@ -83,45 +84,45 @@
             .slide__content{
                 .content__row{
                     .questionTitle{
-                        font-size: 18px;  
+                        font-size: 21px;  
                         margin-bottom: 15px; 
                         span{
                             focus{
-                                font-size: 19px;
+                                font-size: 22px;
                             }
                         }
                     }
                     .mainTitle{
                         span{
-                            font-size: 19px;
+                            font-size: 22px;
                         }
                     }
                 }
                 .bookImage{
-                    margin: 15px 0;
+                    margin: 25px 0;
                     img{
-                        height: 200px;
+                        height: 240px;
                     }
                 }
                 .loadingComment{
                     .comment{
                         span{
-                            font-size: 15px;
+                            font-size: 17px;
                         }
                     }
                     .loadingAnimation{
                         span{
-                            font-size: 14px;
+                            font-size: 15px;
                         }
                         .dot{
-                            width: 5px;
-                            height: 5px;
+                            width: 4px;
+                            height: 4px;
                         }
                     }
                     .resultBtn{
                         .button{
                             img{
-                                height: 115px;
+                                height: 130px;
                             }
                         }
                     }
@@ -134,41 +135,42 @@
                     .title{
                         .title__type{
                             span{
-                                font-size: 24px;
+                                font-size: 26px;
                             }
                         }
                         .title__battery{
                             span{
-                                font-size: 15px;    
+                                font-size: 16px;    
                             }
                         }
                     }
                     .content__row{
-                        margin: 22px;
+                        margin: 30px 0;
                         .mainImage{
+                            margin-bottom: 30px;
                             img{
-                                height: 200px;
+                                height: 240px;
                             }
                         }
                         .info{
                             span{
-                                font-size: 18px;
+                                font-size: 20px;
                                 strong{
-                                    font-size: 24px;
+                                    font-size: 26px;
                                 }
                             }
                         }
                         .friends{
                             .good,
                             .bad{
-                                font-size: 16px;
+                                font-size: 17px;
                             }
                         }
                     }
                     .sharedSNS{
                         .sharedImage{
                             img{
-                                height: 40px;
+                                height: 42px;
                             }
                         }
                     }
