button event duration change

--- a/src/assets/scss/config/_colors.scss
+++ b/src/assets/scss/config/_colors.scss
@@ -1,6 +1,6 @@
 $default-bg: #ffeddd;
 $selectBtn: #fad1c7;
-$selectBtn-shadow: #f7bcb1;
+$selectBtn-shadow: #eb9c8e;
 $loading: #f3a09e;
 $type-one: #fee0b9;
 $type-two: #e3f4fa;
