--- a/src/assets/scss/screens/start.scss
+++ b/src/assets/scss/screens/start.scss
@@ -74,6 +74,10 @@
                 img{
                     height: 105px;
                 }
+                &:active{
+                    background-color: transparent;
+                    outline: none;
+                }
             }
         }
     }
