--- a/src/assets/scss/screens/start.scss
+++ b/src/assets/scss/screens/start.scss
@@ -74,9 +74,9 @@
                 img{
                     height: 105px;
                 }
+                -webkit-tap-highlight-color: transparent;
                 &:active{
-                    background-color: transparent;
-                    outline: none;
+                    -webkit-tap-highlight-color: transparent;
                 }
             }
         }
