--- a/src/views/screens/question5.pug
+++ b/src/views/screens/question5.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C5%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            .button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
                 span 선물은 다 좋아! 기쁜 마음으로 받는다
-            .button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2" ontouchstart="")
                 span ②
                 span 내 취향이 아니라고 솔직히 말하고<br>받지 않는다
-            .button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3" ontouchstart="")
                 span ③
                 span 우선 받지만 방 어딘가에 두고<br> 사용하진 않는다
-            .button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4" ontouchstart="")
                 span ④
                 span 구매한 곳으로 가서 다른 상품으로 교환한다
         
