--- a/src/views/screens/question9.pug
+++ b/src/views/screens/question9.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C9%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            .button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
                 span 고맙게 받는다
-            .button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2" ontouchstart="")
                 span ②
                 span 유효기간이 끝날 때까지 사용하지 않는다
-            .button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3" ontouchstart="")
                 span ③
                 span 나도 기억했다가 생일을 챙겨 준다
-            .button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4" ontouchstart="")
                 span ④
                 span 다가오는 친구들 생일은 없는지 살핀다
         
