--- a/src/views/screens/question2.pug
+++ b/src/views/screens/question2.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C2%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            .button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
                 span 옆 테이블 사람에게<br>먹고있는 메뉴를 물어본다
-            .button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2" ontouchstart="")
                 span ②
                 span 내가 먹고 싶은 메뉴 위주로 주문한다
-            .button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3" ontouchstart="")
                 span ③
                 span "난 아무거나"라고 말한다
-            .button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4" ontouchstart="")
                 span ④
                 span 먹고 싶은 메뉴를 각자 하나씩 고른다
         
