--- a/src/views/screens/question4.pug
+++ b/src/views/screens/question4.pug
@@ -11,16 +11,16 @@
                 .main__image
                     img(src="https://ddamjengi1020.github.io/imageHosting/%EA%B4%80%ED%83%9C%EA%B8%B0/%EB%AC%B8%EC%A0%9C/%EB%AC%B8%EC%A0%9C4%EC%9D%B4%EB%AF%B8%EC%A7%80.png")
         .buttons
-            .button.selectBtn(data-id="1")
+            .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
                 span 오랜만에 친구에게 연락을 해 본다
-            .button.selectBtn(data-id="2")
+            .button.selectBtn(data-id="2" ontouchstart="")
                 span ②
                 span 내 과거 사진을 보면서<br>지금은 용 됐다고 생각한다
-            .button.selectBtn(data-id="3")
+            .button.selectBtn(data-id="3" ontouchstart="")
                 span ③
                 span 멀어진 사이를 혼자 씁쓸해한다
-            .button.selectBtn(data-id="4")
+            .button.selectBtn(data-id="4" ontouchstart="")
                 span ④
                 span 신경 쓰지 않고 오늘 올릴 사진을 찾아본다
         
