font src modify

--- a/src/assets/scss/config/fonts.scss
+++ b/src/assets/scss/config/fonts.scss
@@ -1,72 +1,72 @@
 @font-face{
     font-family: "SCDream1";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream1.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream1.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream1.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream1.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream1.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.woff") format("woff");
 }
 @font-face{
     font-family: "SCDream2";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream2.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream2.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream2.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream2.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream2.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.woff") format("woff");
 }
 @font-face{
     font-family: "SCDream3";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream3.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream3.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream3.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream3.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream3.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.woff") format("woff");
 }
 @font-face{
     font-family: "SCDream4";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream4.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream4.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream4.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream4.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream4.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.woff") format("woff");
 }
 @font-face{
     font-family: "SCDream5";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream5.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream5.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream5.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream5.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream5.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.woff") format("woff");
 }
 @font-face{
     font-family: "SCDream6";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream6.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream6.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream6.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream6.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream6.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream6.woff") format("woff");
 }
 @font-face{
     font-family: "SCDream7";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream7.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream7.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream7.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream7.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream7.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff") format("woff");
 }
 @font-face{
     font-family: "SCDream8";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream8.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream8.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream8.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream8.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream8.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.woff") format("woff");
 }
 @font-face{
     font-family: "SCDream9";
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream9.eot");
-    src: url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream9.eot?iefix") format("embedded-opentype"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream9.woff") format("woff"),
-    url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream9.ttf") format("truetype");
-    src:local("@"),url("https://ddamjengi1020.github.io/fontHosting/sideProject/font-hosting/scoredream/SCDream9.woff") format("woff");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.eot");
+    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.eot?iefix") format("embedded-opentype"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.woff") format("woff"),
+    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.ttf") format("truetype");
+    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.woff") format("woff");
 }
