--- a/src/assets/scss/config/fonts.scss
+++ b/src/assets/scss/config/fonts.scss
@@ -1,35 +1,35 @@
-@font-face{
-    font-family: "SCDream1";
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.woff") format("woff");
-}
-@font-face{
-    font-family: "SCDream2";
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.woff") format("woff");
-}
-@font-face{
-    font-family: "SCDream3";
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.woff") format("woff");
-}
-@font-face{
-    font-family: "SCDream4";
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.woff") format("woff");
-}
+// @font-face{
+//     font-family: "SCDream1";
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.eot");
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.eot?iefix") format("embedded-opentype"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.woff") format("woff"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.ttf") format("truetype");
+//     src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream1.woff") format("woff");
+// }
+// @font-face{
+//     font-family: "SCDream2";
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.eot");
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.eot?iefix") format("embedded-opentype"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.woff") format("woff"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.ttf") format("truetype");
+//     src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream2.woff") format("woff");
+// }
+// @font-face{
+//     font-family: "SCDream3";
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.eot");
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.eot?iefix") format("embedded-opentype"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.woff") format("woff"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.ttf") format("truetype");
+//     src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream3.woff") format("woff");
+// }
+// @font-face{
+//     font-family: "SCDream4";
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.eot");
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.eot?iefix") format("embedded-opentype"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.woff") format("woff"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.ttf") format("truetype");
+//     src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream4.woff") format("woff");
+// }
 @font-face{
     font-family: "SCDream5";
     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream5.eot");
@@ -54,19 +54,19 @@
     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.ttf") format("truetype");
     src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream7.woff") format("woff");
 }
-@font-face{
-    font-family: "SCDream8";
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.woff") format("woff");
-}
-@font-face{
-    font-family: "SCDream9";
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.eot");
-    src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.eot?iefix") format("embedded-opentype"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.woff") format("woff"),
-    url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.ttf") format("truetype");
-    src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.woff") format("woff");
-}
+// @font-face{
+//     font-family: "SCDream8";
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.eot");
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.eot?iefix") format("embedded-opentype"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.woff") format("woff"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.ttf") format("truetype");
+//     src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream8.woff") format("woff");
+// }
+// @font-face{
+//     font-family: "SCDream9";
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.eot");
+//     src: url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.eot?iefix") format("embedded-opentype"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.woff") format("woff"),
+//     url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.ttf") format("truetype");
+//     src:local("@"),url("https://front-juno.github.io/images-fonts/fonts/scoredream/SCDream9.woff") format("woff");
+// }
