--- a/src/views/partials/type4.pug
+++ b/src/views/partials/type4.pug
@@ -26,6 +26,6 @@
                 | 관계수호자형
     .sharedSNS
         .sharedImage
-            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EA%B3%B5%ED%86%B5%EA%B3%B5%EC%9C%A0%ED%95%98%EA%B8%B0.png")
+            img(src="https://front-juno.github.io/images-fonts/images/%EA%B4%80%ED%83%9C%EA%B8%B0/%EC%9C%A0%ED%98%95/%EA%B3%B5%EC%9C%A0%ED%95%98%EA%B8%B0.png")
         .addThis
             .addthis_inline_share_toolbox_eouf
