--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,6 +3,9 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, user-scalable=no" )
+        meta(property="og:image" content="")
+        meta(property="og:title" content="관태기 테스트")
+        meta(property="og:description" content="관계에 권태기가 온 건 아닐까? 한번 테스트 해보세요!")
         link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700;900&display=swap" rel="stylesheet")
         link(rel="stylesheet", href="styles.css")
         title 관태기 테스트
