--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,6 +12,8 @@ body,html {
     -ms-user-select:none;
     user-select:none;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 500;
     &:hover{
         cursor: default;
     }
